--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react-dom": "^19.2.0",
     "@google/genai": "^1.22.0",
     "react": "^19.2.0",
-    "jspdf": "2.5.1",
-    "html2canvas": "1.4.1"
+    "jspdf": "2.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
